clusters/k3s/infra/traefik/argocd-ingress.yml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: argocd-forwarded-https
  namespace: argocd
spec:
  headers:
    customRequestHeaders:
      X-Forwarded-Proto: "https"
      X-Forwarded-Port: "443"
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-server-ingress
  namespace: argocd
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: argocd-argocd-forwarded-https@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
  - host: argocd.devcw.xyz
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: argocd-server
            port:
              number: 80
  tls:
  - hosts:
    - argocd.devcw.xyz
